Replace default them with White Theme

--- a/auth/app/views/spree/checkout/registration.html.erb
+++ b/auth/app/views/spree/checkout/registration.html.erb
@@ -1,20 +1,28 @@
 <%= render :partial => 'spree/shared/error_messages', :locals => { :target => @user } %>
 <h2><%= t(:registration) %></h2>
-<div id="registration">
+<div id="registration" data-hook>
   <div id="account">
     <%= render :file => 'spree/user_sessions/new' %>
   </div>
   <% if Spree::Config[:allow_guest_checkout] %>
-    <div id="guest_checkout">
-      <%= render :partial => 'spree/shared/error_messages', :locals => { :target => @order } %>
-      <h2><%= t(:guest_user_account) %></h2>
-      <%= form_for @order, :url => spree.update_checkout_registration_path, :method => :put, :html => { :id => 'checkout_form_registration' } do |f| %>
-        <p>
-          <%= f.label :email, t(:email) %><br />
-          <%= f.email_field :email, :class => 'title' %>
-        </p>
-        <p><%= f.submit t(:continue), :class => 'button primary' %></p>
+    <%= render :partial => 'spree/shared/error_messages', :locals => { :target => @order } %>
+	  <div class="registerGuest">
+			<div class="existing1"><%= t(:guest_user_account) %></div>
+      <%= form_for @order, :url => spree.update_checkout_registration_path,
+        :method => :put, :html => { :id => 'checkout_form_registration', :class => 'clear' } do |f| %>
+				<div data-hook="signup_inside_form">
+					<p>
+            <%= f.label :email, t(:email) %>
+            <%= f.email_field :email, :class => 'title' %>
+					</p>
+				</div>						
+				<div data-hook="signup_below_password_fields">			
+			        <p><%= f.submit t(:continue), :class => 'registerButton' %></p>
+				</div>
       <% end %>
-    </div>
+		</div>
   <% end %>
 </div>
+
+
+
