--- a/core/app/views/spree/orders/edit.html.erb
+++ b/core/app/views/spree/orders/edit.html.erb
@@ -20,24 +20,22 @@
 
         <div id="subtotal" data-hook>
           <h3><%= t(:subtotal) %>: <%= order_subtotal(@order) %></h3>
-        </div>
-
-        <div class="links" data-hook="cart_buttons">
-          <%= button_tag :class => 'large primary', :id => 'update-button' do %>
-            <%= image_tag('icons/update.png') + t(:update) %>
-          <% end %>
-         <%= link_to image_tag('icons/checkout.png') + t(:checkout), checkout_path, :class => 'button checkout primary', :id => 'checkout-link' %>
-        </div>
+          <div class="links" data-hook="cart_buttons">
+            <%= link_to t(:continue_shopping), products_path, :class => 'checkoutButtonContinue checkout primary' %>
+            <%= button_tag :class => 'button', :id => 'update-button' do %>
+              <%=  t(:update) %>
+            <% end %>
+            <%= link_to t(:checkout), checkout_path, :class => 'checkoutButton checkout primary', :id => 'checkout-link' %>
+          </div>
+       </div>
 
       </div>
     <% end %>
   </div>
-  <div id="empty-cart" data-hook>
-  <%= form_tag empty_cart_path, :method => :put do %>
+  <div id="empty-cart" data-hook style="float:left;">
+   <%= form_tag empty_cart_path, :method => :put do %>
     <p id="clear_cart_link" data-hook>
       <%= submit_tag t(:empty_cart), :class => 'button' %>
-      <%= t(:or) %>
-      <%= link_to t(:continue_shopping), products_path, :class => 'continue' %>
     </p>
   <% end %>
   </div>
