--- a/core/app/views/spree/shared/_products.html.erb
+++ b/core/app/views/spree/shared/_products.html.erb
@@ -13,9 +13,9 @@
   <% products.each do |product| %>
     <% if Spree::Config[:show_zero_stock_products] || product.has_stock? %>
       <li id="product_<%= product.id %>" data-hook="products_list_item">
-        <%= link_to product.name, product, :class => 'info' %>
         <%= link_to small_image(product), product %>
-        <span class="price selling"><%= number_to_currency product.price %></span>
+        <b><%= link_to product.name, product, :class => 'info' %></b>
+        <i><%= number_to_currency product.price %></i>
       </li>
     <% end %>
   <% end %>
