--- a/core/app/views/spree/checkout/_address.html.erb
+++ b/core/app/views/spree/checkout/_address.html.erb
@@ -1,14 +1,14 @@
 <fieldset id="billing" data-hook>
   <%= form.fields_for :bill_address do |bill_form| %>
     <legend><%= t(:billing_address) %></legend>
-    <div class="inner" data-hook="billing_inner">
+    <div class="inner1" data-hook="billing_inner">
       <p class="field" id="bfirstname">
-        <%= bill_form.label :firstname, t(:first_name) %><span class="req">*</span><br />
+        <%= bill_form.label :firstname, raw("#{t(:first_name)}<span class='req'>*</span>") %>
         <%= bill_form.text_field :firstname, :class => 'required' %>
       </p>
       <p class="field" id="blastname">
-        <%= bill_form.label :lastname, t(:last_name) %><span class="req">*</span><br />
-        <%= bill_form.text_field :lastname, :class => 'required' %>
+      <%= bill_form.label :lastname, raw("#{t(:last_name)}<span class='req'>*</span>") %>
+      <%= bill_form.text_field :lastname, :class => 'required' %>
       </p>
       <% if Spree::Config[:company] %>
         <p class="field" id="bcompany">
@@ -17,16 +17,16 @@
         </p>
       <% end %>
       <p class="field" id="baddress1">
-        <%= bill_form.label :address1, t(:street_address) %><span class="req">*</span><br />
-        <%= bill_form.text_field :address1, :class => 'required' %>
+      <%= bill_form.label :address1, raw("#{t(:street_address)}<span class='req'>*</span>") %>
+      <%= bill_form.text_field :address1, :class => 'required' %>
       </p>
       <p class="field" id="baddress2">
-        <%= bill_form.label :address2, t(:street_address_2) %><br />
+        <%= bill_form.label :address2, t(:street_address_2) %>
         <%= bill_form.text_field :address2 %>
       </p>
 
       <p class="field" id="bcountry">
-        <%= bill_form.label :country_id, t(:country) %><span class="req">*</span><br />
+        <%= bill_form.label :country_id, raw("#{t(:country)}<span class='req'>*</span>") %>
         <span id="bcountry">
           <%= bill_form.collection_select :country_id, available_countries, :id, :name, {}, {:class => 'required'} %>
         </span>
@@ -35,7 +35,7 @@
       <% if Spree::Config[:address_requires_state] %>
         <p class="field" id="bstate">
           <% have_states = !@order.bill_address.country.states.empty? %>
-          <%= bill_form.label :state, t(:state) %><span class="req">*</span><br />
+          <%= bill_form.label :state, raw("#{t(:state)}<span class='req'>*</span>") %>
           <noscript>
             <%= bill_form.text_field :state_name, :class => 'required' %>
           </noscript>
@@ -57,21 +57,21 @@
       <% end %>
 
       <p class="field" id="bcity">
-        <%= bill_form.label :city, t(:city) %><span class="req">*</span><br />
+        <%= bill_form.label :city, raw("#{t(:city)}<span class='req'>*</span>") %>
         <%= bill_form.text_field :city, :class => 'required' %>
       </p>
 
       <p class="field" id="bzipcode">
-        <%= bill_form.label :zipcode, t(:zip) %><span class="req">*</span><br />
+        <%= bill_form.label :zipcode, raw("#{t(:zip)}<span class='req'>*</span>") %>
         <%= bill_form.text_field :zipcode, :class => 'required' %>
       </p>
       <p class="field" id="bphone">
-        <%= bill_form.label :phone, t(:phone) %><span class="req">*</span><br />
+        <%= bill_form.label :phone, raw("#{t(:phone)}<span class='req'>*</span>") %>
         <%= bill_form.text_field :phone, :class => 'required' %>
       </p>
       <% if Spree::Config[:alternative_billing_phone] %>
         <p class="field" id="baltphone">
-          <%= bill_form.label :alternative_phone, t(:alternative_phone) %><br />
+          <%= bill_form.label :alternative_phone, t(:alternative_phone) %>
           <%= bill_form.text_field :alternative_phone %>
         </p>
       <% end %>
@@ -82,36 +82,37 @@
 <fieldset id="shipping" data-hook>
   <%= form.fields_for :ship_address do |ship_form| %>
     <legend><%= t(:shipping_address) %></legend>
+    <div class="inner1" data-hook="shipping_inner">
     <p class="field checkbox" data-hook="use_billing">
       <%= check_box_tag 'order[use_billing]', '1', (!(@order.bill_address.empty? && @order.ship_address.empty?) && @order.bill_address.eql?(@order.ship_address)) %> 
       <%= label_tag :order_use_billing, t(:use_billing_address), :id => 'use_billing' %>
     </p>
     <div class="inner" data-hook="shipping_inner">
       <p class="field" id="sfirstname">
-        <%= ship_form.label :firstname, t(:first_name) %><span class="req">*</span><br />
+        <%= ship_form.label :firstname, raw("#{t(:first_name)}<span class='req'>*</span>") %>
         <%= ship_form.text_field :firstname, :class => 'required' %>
       </p>
       <p class="field" id="slastname">
-        <%= ship_form.label :lastname, t(:last_name) %><span class="req">*</span><br />
+        <%= ship_form.label :lastname, raw("#{t(:last_name)}<span class='req'>*</span>") %>
         <%= ship_form.text_field :lastname, :class => 'required' %>
       </p>
       <% if Spree::Config[:company] %>
         <p class="field" id="scompany">
-          <%= ship_form.label :company, t(:company) %><br />
+          <%= ship_form.label :company, t(:company) %>
           <%= ship_form.text_field :company %>
         </p>
       <% end %>
       <p class="field" id="saddress1">
-        <%= ship_form.label :address1, t(:street_address) %><span class="req">*</span><br />
+        <%= ship_form.label :address1, raw("#{t(:street_address)}<span class='req'>*</span>") %>
         <%= ship_form.text_field :address1, :class => 'required' %>
       </p>
       <p class="field" id="saddress2">
-        <%= ship_form.label :address2, t(:street_address_2) %><br />
+        <%= ship_form.label :address2, t(:street_address_2) %>
         <%= ship_form.text_field :address2 %>
       </p>
 
       <p class="field" id="scountry">
-        <%= ship_form.label :country_id, t(:country) %><span class="req">*</span><br />
+        <%= ship_form.label :country_id, raw("#{t(:country)}<span class='req'>*</span>") %>
         <span id="scountry">
           <%= ship_form.collection_select :country_id, available_countries, :id, :name, {}, {:class => 'required'} %>
         </span>
@@ -120,7 +121,7 @@
       <% if Spree::Config[:address_requires_state] %>
         <p class="field" id="sstate">
           <% have_states = !@order.ship_address.country.states.empty? %>
-          <%= ship_form.label :state, t(:state) %><span class="req">*</span><br />
+          <%= ship_form.label :state, raw("#{t(:state)}<span class='req'>*</span>") %>
           <noscript>
             <%= ship_form.text_field :state_name, :class => 'required' %>
           </noscript>
@@ -142,30 +143,31 @@
       <% end %>
 
       <p class="field" id="scity">
-        <%= ship_form.label :city, t(:city) %><span class="req">*</span><br />
+        <%= ship_form.label :city, raw("#{t(:city)}<span class='req'>*</span>") %>
         <%= ship_form.text_field :city, :class => 'required' %>
       </p>
 
 
       <p class="field" id="szipcode">
-        <%= ship_form.label :zipcode, t(:zip) %><span class="req">*</span><br />
+        <%= ship_form.label :zipcode, raw("#{t(:zip)}<span class='req'>*</span>") %>
         <%= ship_form.text_field :zipcode, :class => 'required' %>
       </p>
       <p class="field" id="sphone">
-        <%= ship_form.label :phone, t(:phone) %><span class="req">*</span><br />
+        <%= ship_form.label :phone, raw("#{t(:phone)}<span class='req'>*</span>") %>
         <%= ship_form.text_field :phone, :class => 'required' %>
       </p>
       <% if Spree::Config[:alternative_shipping_phone] %>
         <p class="field" id="saltphone">
-          <%= ship_form.label :alternative_phone, t(:alternative_phone) %><br />
+          <%= ship_form.label :alternative_phone, t(:alternative_phone) %>
           <%= ship_form.text_field :alternative_phone %>
         </p>
       <% end %>
     </div>
+  </div>
   <% end %>
 </fieldset>
 
 <hr class="space" />
 <div class="form-buttons" data-hook="buttons">
-  <%= submit_tag t(:save_and_continue), :class => 'continue button primary' %>
+  <%= submit_tag t(:save_and_continue), :class => 'checkoutSave' %>
 </div>
