--- a/core/app/views/spree/checkout/_delivery.html.erb
+++ b/core/app/views/spree/checkout/_delivery.html.erb
@@ -1,19 +1,19 @@
 <fieldset id='shipping_method' data-hook>
   <legend><%= t(:shipping_method) %></legend>
-  <div class="inner" data-hook="shipping_method_inner">
-    <div id="methods">
-      <p class="field radios">
+  <div class="inner1" data-hook="shipping_method_inner">
+    <div id="methods" class="clear">
+      <ul>
         <% @order.rate_hash.each do |shipping_method| %>
-          <label>
+          <li>
             <%= radio_button(:order, :shipping_method_id, shipping_method[:id]) %>
             <% if Spree::Config[:shipment_inc_vat] %>
               <%= shipping_method[:name] %> <%= format_price (1 + Spree::TaxRate.default) * shipping_method[:cost] %>
             <% else %>
             <%= shipping_method[:name] %> <%= number_to_currency shipping_method[:cost] %>
             <% end %>
-          </label><br />
+            </li>
         <% end %>
-      </p>
+      </ul>
     </div>
     <% if Spree::Config[:shipping_instructions] && @order.rate_hash.present? %>
       <p id="minstrs" data-hook>
@@ -25,5 +25,5 @@
 </fieldset>
 
 <div class="form-buttons" data-hook="buttons">
-  <%= submit_tag t(:save_and_continue), :class => 'continue button primary' %>
+  <%= submit_tag t(:save_and_continue), :class => 'checkoutSave' %>
 </div>
