--- a/core/app/views/spree/checkout/_summary.html.erb
+++ b/core/app/views/spree/checkout/_summary.html.erb
@@ -1,32 +1,24 @@
-<h3><%= t(:order_summary) %></h3>
-<table data-hook="order_summary">
-  <tbody>
-    <tr data-hook="item_total">
-      <td><strong><%= t(:item_total) %>:</strong></td>
-      <td><strong><%= number_to_currency order.item_total %></strong></td>
-    </tr>
-    <tbody id="summary-order-charges" data-hook>
-      <% order.adjustments.eligible.each do |adjustment| %>
-      <% next if (adjustment.originator_type == 'Spree::TaxRate') and (adjustment.amount == 0) %>
-        <tr>
-          <td><%= adjustment.label %>: </td>
-          <td><%= number_to_currency adjustment.amount %></td>
-        </tr>
-      <% end %>
-    </tbody>
-    <tr data-hook="order_total">
-      <td><strong><%= t(:order_total) %>:</strong></td>
-      <td><strong><span id='summary-order-total'><%= number_to_currency @order.total %></span></strong></td>
-    </tr>
-    <% if order.price_adjustment_totals.present? %>
-      <tbody id="price-adjustments" data-hook="order_details_price_adjustments">
-        <% @order.price_adjustment_totals.keys.each do |key| %>
-          <tr class="total">
-            <td><strong><%= key %></strong></td>
-            <td><strong><span><%= number_to_currency @order.price_adjustment_totals[key] %></span></strong></td>
-          </tr>
-        <% end %>
-      </tbody>
+<div class="Checkout"><%= t(:order_summary) %></div>
+  <ul>
+    <li><label><%= t(:item_total) %>: </label><%= number_to_currency order.item_total %></li>
+   <% order.adjustments.eligible.each do |adjustment| %>
+    <% next if (adjustment.originator_type == 'Spree::TaxRate') and (adjustment.amount == 0) %>
+      <li>
+        <label><%= adjustment.label %>: </label><%= number_to_currency adjustment.amount %>
+      </li>
     <% end %>
-  </tbody>
-</table>
+    <li class="confirmTotal" data-hook="order_total">
+      <label><%= t(:order_total) %>:</label>
+      <%= number_to_currency order.total %>
+    </li>
+    <% if order.price_adjustment_totals.present? %>
+      <li id="price-adjustments" data-hook="order_details_price_adjustments">
+        <% order.price_adjustment_totals.keys.each do |key| %>
+            <label><%= key %>: </label>
+            <%= number_to_currency order.price_adjustment_totals[key] %>
+        <% end %>
+      </li>
+    <% end %>
+  </ul>
+</div>
+
