--- a/core/app/views/spree/checkout/edit.html.erb
+++ b/core/app/views/spree/checkout/edit.html.erb
@@ -2,17 +2,16 @@
   <%= javascript_include_tag states_path %>
 <% end %>
 <div id="checkout" data-hook>
-  <h1><%= t(:checkout) %></h1>
-  <%= checkout_progress %>
-  <br clear="left" />
+<h1><%= t(:checkout) %></h1>
+
+<div id="checkout-step-address" class="clear" >
+  <div class="Checkout">Your Checkout Progress</div>
   <%= render :partial => 'spree/shared/error_messages', :locals => { :target => @order } %>
-  <% if @order.state != 'confirm' %>
-    <div id="checkout-summary" data-hook="checkout_summary_box">
-      <%= render :partial => 'summary', :locals => { :order => @order } %>
-    </div>
-  <% end %>
-  <%= form_for @order, :url => update_checkout_path(@order.state), :html => { :id => "checkout_form_#{@order.state}" } do |form| %>
-    <%= render @order.state, :form => form %>
-    <%= submit_tag nil, :id => 'post-final', :style => 'display:none;' %>
-  <% end %>
+  <%= checkout_progress %>
+  <%= render :partial => 'summary', :locals => { :order => @order } if @order.state != 'confirm' %>
 </div>
+
+<%= form_for @order, :url => update_checkout_path(@order.state), :html => { :id => "checkout_form_#{@order.state}" } do |form| %>
+  <%= render @order.state, :form => form %>
+  <%= submit_tag nil, :id => 'post-final', :style => 'display:none;' %>
+<% end %>
