--- a/core/app/views/spree/products/_cart_form.html.erb
+++ b/core/app/views/spree/products/_cart_form.html.erb
@@ -1,19 +1,8 @@
 <%= form_for :order, :url => populate_orders_url do |f| %>
-  <div data-hook="inside_product_cart_form">
 
-    <% if @product.price %>
-      <div data-hook="product_price">
-        <dl id="product-price">
-          <dt><%= t(:price) %></dt>
-          <dd><span class="price selling"><%= number_to_currency @product.price %></span></dd>
-        </dl>
-      </div>
-    <% end %>
 
     <% if @product.has_variants? %>
-      <div id="product-variants">
-        <h2><%= t(:variants) %></h2>
-        <ul>
+        <ul class="variants">
           <% has_checked = false
           @product.variants.active.each_with_index do |v,index|
             next if v.option_values.empty? || (!v.in_stock && !Spree::Config[:show_zero_stock_products])
@@ -32,18 +21,18 @@
             </li>
           <% end%>
         </ul>
-      </div>
     <% end%>
+
+  <div data-hook="inside_product_cart_form">
     <% if @product.has_stock? || Spree::Config[:allow_backorders] %>
       <%= number_field_tag (@product.has_variants? ? :quantity : "variants[#{@product.master.id}]"),
         1, :class => 'title', :in => 1..@product.on_hand %>
       &nbsp;
       <%= button_tag :class => 'large primary', :id => 'add-to-cart-button' do %>
-        <%= image_tag('icons/add-to-cart.png') + t(:add_to_cart) %>
+        <%= t(:add_to_cart) %>
       <% end %>
     <% else %>
       <%= content_tag('strong', t(:out_of_stock)) %>
     <% end %>
-
   </div>
 <% end %>
