--- a/core/app/views/spree/products/_properties.html.erb
+++ b/core/app/views/spree/products/_properties.html.erb
@@ -1,6 +1,6 @@
 <% unless @product_properties.empty? %>
-<dl id="product-properties" class="table-display" data-hook>
-<% for product_property in @product_properties 
+<dl id="product-properties"  data-hook>
+<% for product_property in @product_properties
     css_class = cycle('even', 'odd') %>
   <dt class="<%= css_class %>"><%= product_property.property.presentation %></dt>
   <dd class="<%= css_class %>"><%= product_property.value %></dd>
