--- a/core/app/views/spree/products/_thumbnails.html.erb
+++ b/core/app/views/spree/products/_thumbnails.html.erb
@@ -1,19 +1,17 @@
 <!-- no need for thumnails unless there is more then one image -->
 <% if product.images.size > 1 %>
-  <ul id="product-thumbnails" class="thumbnails" data-hook>
     <% product.images.each do |i| %>
-      <li class="tmb-all" id="tmb-<%= i.id.to_s %>"><%= link_to image_tag(i.attachment.url(:mini)), i.attachment.url(:product) %></li>
+      <%= link_to image_tag(i.attachment.url(:mini)), i.attachment.url(:product) %>
     <% end %>
     <% if @product.has_variants?
       @variants.each do |v|
         if v.available?
           v.images.each do |i| %>
-            <li class="vtmb-<%= v.id.to_s %> vtmb" id="tmb-<%= i.id.to_s %>"><%= link_to image_tag(i.attachment.url(:mini)), i.attachment.url(:product) %></li>
+            <%= link_to image_tag(i.attachment.url(:mini)), i.attachment.url(:product) %>
           <%
           end
         end
       end
     end
     %>
-  </ul>
 <% end %>
