--- a/core/app/views/spree/products/show.html.erb
+++ b/core/app/views/spree/products/show.html.erb
@@ -1,7 +1,4 @@
-<div data-hook="product_show">
-  <% @body_id = 'product-details' %>
-  <h1><%= accurate_title %></h1>
-
+<div class="clear">
   <div id="product-images" data-hook="product_images">
     <div id="main-image" data-hook>
       <%= render :partial => 'image' %>
@@ -10,17 +7,28 @@
       <%= render :partial => 'thumbnails', :locals => { :product => @product } %>
     </div>
   </div>
+  <div id="product_show" data-hook="product_show">
+    <% @body_id = 'product-details' %>
+    <h1><%= accurate_title %></h1>
+    <% if @product.price %>
+      <div class="product_price" data-hook="product_price">
+        <%= number_to_currency @product.price %>
+      </div>
+    <% end %>
 
-  <div id="cart-form" data-hook="cart_form">
-    <%= render :partial => 'cart_form' %>
-  </div>
-
-  <div id="product-description" data-hook="product_description">
-    <%= product_description(@product) rescue t(:product_has_no_description) %>
+    <div id="product-description" data-hook="product_description">
+      <p><%= product_description(@product) rescue t(:product_has_no_description) %></p>
+    </div>
+    <div id="cart-form" class="clear" data-hook="cart_form">
+      <%= render :partial => 'cart_form' %>
+    </div>
     <div data-hook="product_properties">
       <%= render :partial => 'properties' %>
     </div>
+
+    <%= render :partial => 'taxons' %>
   </div>
 </div>
 
-<%= render :partial => 'taxons' %>
+
+ 
